apps/garmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: garmin
  namespace: garmin
spec:
  selector:
    app: garmin
  ports:
    - name: http
      port: 80
      targetPort: 5000
  type: ClusterIP
